--- a/src/app/application/app.component.scss
+++ b/src/app/application/app.component.scss
@@ -1,5 +1,6 @@
+@import '../../css/colors';
+
 $header-width: 250px;
-$background-color: #252525;
 
 header {
   position: fixed;
@@ -47,9 +48,6 @@ header {
         line-height: 60px;
 
         a {
-          color: white;
-          text-decoration: none;
-
           display: block;
           width: 100%;
           height: 100%;
@@ -57,8 +55,8 @@ header {
           transition: background-color .25s ease-in-out;
         }
 
-        a:link, a:visited, :hover {
-          color: white;
+        a, a:link, a:visited, :hover {
+          color: $text-color;
           text-decoration: none;
         }
       }
