Added colored background hovering animation to the menu items. Changed the available menu items.

--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -5,11 +5,10 @@
   </div>
   <nav>
     <ul>
-      <li><a href="#" id="home">Home</a></li>
-      <li><a href="#" id="home">Technologies</a></li>
-      <li><a href="#" id="home">Projects</a></li>
-      <li><a href="#" id="home">CV</a></li>
-      <li><a href="#" id="home">Contact</a></li>
+      <li><a href="#" id="skills">Skills</a></li>
+      <li><a href="#" id="projects">Projects</a></li>
+      <li><a href="#" id="experience">Experience</a></li>
+      <li><a href="#" id="contact">Contact</a></li>
     </ul>
   </nav>
 </header>
