--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -1,3 +1,8 @@
 $background-color: #252525;
 
 $text-color: white;
+
+$color-skills: #539e53;
+$color-projects: #3c8cac;
+$color-experience: #8951A0;
+$color-contact: #34495e;
