Added Font Awesome for future use; refactored how we access fonts in CSS.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,9 +6,10 @@
  */
 
  @import 'colors';
+ @import 'fonts';
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  @extend %open-sans-font;
   color: $text-color;
   background-color: black;
 }
