--- a/src/app/application/app.component.scss
+++ b/src/app/application/app.component.scss
@@ -1,4 +1,5 @@
 @import '../../css/colors';
+@import '../../css/fonts';
 
 $header-width: 250px;
 
@@ -14,7 +15,7 @@ header {
   z-index: 10;
   
   #logo {
-    font-family: 'League Gothic', sans-serif;
+    @extend %league-gothic-font;
     padding: 55px 20px;
     text-transform: uppercase;
     text-align: center;
@@ -35,7 +36,7 @@ header {
   
   nav {
     ul {
-      font-family: 'Open Sans SemiBold', sans-serif;
+      @extend %open-sans-semibold-font;
       text-align: center;
       font-size: 1.1em;
       
@@ -44,8 +45,8 @@ header {
       li {
         display: block;
         width: 100%;
-        height: 60px;
-        line-height: 60px;
+        height: 65px;
+        line-height: 65px;
 
         a {
           display: block;
