Added GitHub button to the bottom of the nav.

--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -11,6 +11,7 @@
       <li><a href="#" id="contact">Contact</a></li>
     </ul>
   </nav>
+  <a href="https://github.com/pkshields" id="github-link" target="_blank"><i class="fab fa-github"></i></a>
 </header>
 <main>
   <router-outlet></router-outlet>
