--- a/src/app/application/app.component.scss
+++ b/src/app/application/app.component.scss
@@ -56,7 +56,7 @@ header {
           width: 100%;
           height: 100%;
 
-          transition: background-color .25s ease-in-out;
+          transition: background-color .25s ease-in-out, padding-left .25s linear;
         }
 
         a, a:link, a:visited, a:hover {
@@ -65,6 +65,8 @@ header {
         }
 
         a:hover{
+          padding-left: 3px;
+
           &#skills {
             background-color: $color-skills;
           }
