--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -6,3 +6,8 @@ $color-skills: #539e53;
 $color-projects: #3c8cac;
 $color-experience: #8951A0;
 $color-contact: #34495e;
+
+$color-emerald: #2ecc71;
+$color-peter-river: #3498db;
+$color-carrot: #e67e22;
+$color-alizarin: #e74c3c;
