--- a/src/app/application/app.component.scss
+++ b/src/app/application/app.component.scss
@@ -84,6 +84,10 @@ header {
     }
   }
 
+  #menu-button {
+    display: none;
+  }
+
   #github-link {
     font-size: $github-icon-width;
     color: #363636;
