Added mobile support to the home page.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -11,5 +11,6 @@
 body {
   @extend %open-sans-font;
   color: $text-color;
-  background-color: black;
+  background-color: $background-color;
+  overflow-x: hidden;
 }
