Added the initial content to the Skills page via a cards based design.

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,6 +3,69 @@
 </header>
 <article>
   <section>
-      Content
+    <div class="card">
+      <div class="card-title"><i class="fas fa-mobile-alt"></i></div>
+      <p>Android</p>
+      <ul>
+        <li>Kotlin</li>
+        <li>Java</li>
+        <li>Espresso</li>
+        <li>Android Jetpack</li>
+        <li>Retrofit</li>
+        <li>Gradle</li>
+      </ul>
+      <p>iOS</p>
+      <ul>
+        <li>Swift</li>
+        <li>Objective-C</li>
+        <li>ReactiveX</li>
+        <li>R.swift</li>
+      </ul>
+    </div>
+    <div class="card">
+      <div class="card-title"><i class="far fa-id-card"></i></div>
+      <p>Frontend</p>
+      <ul>
+        <li>Angular</li>
+        <li>TypeScript</li>
+        <li>Sass/CSS3</li>
+        <li>Bootstrap</li>
+        <li>Jasmine</li>
+        <li>Karma</li>
+      </ul>
+      <p>Backend</p>
+      <ul>
+        <li>Kotlin/Java</li>
+        <li>Dropwizard</li>
+        <li>Jooq</li>
+        <li>Retrofit</li>
+        <li>Gradle</li>
+      </ul>
+    </div>
+    <div class="card">
+      <div class="card-title"><i class="fas fa-gamepad"></i></div>
+      <ul>
+        <li>C#</li>
+        <li>C++</li>
+        <li>Unity</li>
+        <li>MonoGame/XNA</li>
+        <li>OpenGL</li>
+        <li>WebGL</li>
+      </ul>
+    </div>
+    <div class="card">
+      <div class="card-title"><i class="fas fa-server"></i></div>
+      <ul>
+        <li>Jenkins</li>
+        <li>CircleCI</li>
+        <li>PostgreSQL</li>
+        <li>AWS</li>
+        <li>Docker</li>
+        <li>Vagrant</li>
+        <li>JetBrain's IDEs</li>
+        <li>Boxfuse</li>
+        <li>Flyway</li>
+      </ul>
+    </div>
   </section>
 </article>
