--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -2,9 +2,9 @@ $background-color: #252525;
 
 $text-color: white;
 
-$color-skills: #539e53;
+$color-experience: #539e53;
+$color-skills: #3c8cac;
 $color-projects: #8951A0;
-$color-experience: #3c8cac;
 $color-contact: #34495e;
 
 $color-emerald: #2ecc71;
