--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,4 +1,59 @@
 @import '../../css/colors';
+@import '../../css/fonts';
 @import '../../css/page';
 
 @include standard-page-styling($color-skills);
+
+$font-awesome-tick: '\f00c';
+
+section {
+  text-align: center;
+
+  .card {
+    display: inline-block;
+    background: #fff;
+    color: black;
+    text-align: left;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.35);
+  
+    vertical-align: top;
+    width: 20%;
+    min-width: 200px;
+    margin: 15px;
+    padding: 10px;
+  
+    .card-title {
+      text-align: center;
+      color: $color-skills;
+      border-bottom: 3px solid $color-skills;
+      margin: 0 15px 20px 15px;
+      padding: 15px 0;
+  
+      i {
+        font-size: 2.7em;
+      }
+    }
+    
+    p {
+      @extend %open-sans-semibold-font;
+      padding: 15px;
+    }
+  
+    ul {
+      padding: inherit;
+      margin: inherit;
+      margin-top: 0;
+  
+      li {
+        line-height: 1.8em;
+  
+        &:before {    
+          @extend %font-awesome;
+          content: $font-awesome-tick;
+          margin: 0 15px 0 -15px;
+          color: $color-skills;
+        }
+      }
+    }
+  }
+}
