Designed a timeline to be used on the Experience page. Added skeleton experience page.

--- a/src/app/application/app.component.scss
+++ b/src/app/application/app.component.scss
@@ -33,7 +33,7 @@ header {
     // Developer
     h2 {
       font-size: 2em;
-      color: #d80000;
+      color: $text-header-subtitle-color;
     }
   }
   
