--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -1,6 +1,9 @@
 $background-color: #252525;
+$timeline-color: #ddd;
 
 $text-color: white;
+$text-color-dark: #3e3e3e;
+$text-header-subtitle-color: #d80000;
 
 $color-experience: #539e53;
 $color-skills: #3c8cac;
