--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -12,7 +12,7 @@ section {
   .card {
     display: inline-block;
     background: #fff;
-    color: black;
+    color: $text-color-dark;
     text-align: left;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.35);
   
