--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -50,7 +50,7 @@ ul {
       margin-left: $date-width + $date-to-timeline-padding + $timeline-to-content-padding;
 
       position: relative;
-      padding: 10px;
+      padding: 18px;
 
       background: $content-background-color;
       color: $text-color-dark;
@@ -78,6 +78,15 @@ ul {
       h4 {
         padding-left: 0;
         color: $color-experience;
+      }
+
+      p {
+        line-height: 1.5em;
+        padding: 0 0 20px 0;
+
+        &:last-child {
+          padding: 0;
+        }
       }
     }
   }
