--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -10,6 +10,11 @@ $color-skills: #3c8cac;
 $color-projects: #8951A0;
 $color-contact: #34495e;
 
+$color-experience-link: #50ff64;
+$color-skills-link: #BBE3FF;
+$color-projects-link: #E29BFF;
+$color-contact-link: #7dc5f9;
+
 $color-emerald: #2ecc71;
 $color-peter-river: #3498db;
 $color-carrot: #e67e22;
