Added mobile support to the Experience page.

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -21,7 +21,7 @@
         </div>
       </li>
       <li>
-        <div class="date">2013-2014</div>
+        <div class="date">2013 - 2014</div>
         <div class="content">
           <h4>CME Group</h4>
           <p>For my University placement year I worked for CME Group as a Software Engineer Intern. The role consisted mostly as a back-end Java developer working on a number of web-based applications. Other responsibilities included writing Bash scripts for Unix environments, writing Selenium front-end tests and building computers out of old hardware parts for The Simon Community.</p>
