--- a/src/css/_page.scss
+++ b/src/css/_page.scss
@@ -1,4 +1,5 @@
 @import 'fonts';
+@import 'mediasizes';
 
 @mixin standard-page-styling($page-color, $page-link-color) {
   header {
@@ -46,5 +47,11 @@
   :host {
     min-height: 100%;
     background-color: $page-color;
+  }
+
+  @media #{$mobile-size} {
+    header > h1 {
+      padding-left: 50px;
+    }
   }
 }
