Added Contact page, with a bunch of contact links and a few good Tweet embeds.

--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -8,7 +8,7 @@
       <li><a routerLink="/experience" routerLinkActive="selected"  id="experience">Experience</a></li>
       <li><a routerLink="/skills" routerLinkActive="selected" id="skills">Skills</a></li>
       <li><a href="#" id="projects">Projects</a></li>
-      <li><a href="#" id="contact">Contact</a></li>
+      <li><a routerLink="/contact" routerLinkActive="selected" id="contact">Contact</a></li>
     </ul>
   </nav>
   <i id="menu-button" class="fas fa-bars" (click)="toggleMenu()"></i>
