--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,17 +7,17 @@
       <p>If you would like to contact me, feel free via the following methods:</p>
       <div>
         <ul>
-          <li>Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;&#58;me&#064;pkshields.com"><span class="reverse">moc.sdleihskp@em</span></a></li>
-          <li>Twitter: <a href="http://twitter.com/pkshields" target="_blank">@Pkshields</a></li>
-          <li>LinkedIn: <a href="http://uk.linkedin.com/pub/paul-shields/59/95b/8bb/" target="_blank">Link</a></li>
+          <li class="email">Email: <a href="&#109;&#097;&#105;&#108;&#116;&#111;&#58;me&#064;pkshields.com"><span class="reverse">moc.sdleihskp@em</span></a></li>
+          <li class="twitter">Twitter: <a href="http://twitter.com/pkshields" target="_blank">@Pkshields</a></li>
+          <li class="linkedin">LinkedIn: <a href="http://uk.linkedin.com/pub/paul-shields/59/95b/8bb/" target="_blank">Link</a></li>
         </ul>
       </div>
 
       <p>You can also find me on the following services:</p>
       <div>
         <ul>
-          <li>GitHub: <a href="http://github.com/pkshields" target="_blank">Link</a></li>
-          <li>BitBucket: <a href="http://bitbucket.org/Pkshields" target="_blank">Link</a></li>
+          <li class="github">GitHub: <a href="http://github.com/pkshields" target="_blank">Link</a></li>
+          <li class="bitbucket">BitBucket: <a href="http://bitbucket.org/Pkshields" target="_blank">Link</a></li>
         </ul>
       </div>
     </div>
