--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,14 @@
 @import '../../css/colors';
+@import '../../css/fonts';
 @import '../../css/page';
 
 @include standard-page-styling($color-contact, $color-contact-link);
+
+%font-awesome-bullet-points {
+  @extend %font-awesome;
+  margin: 0 15px 0 -15px;
+  color: $color-contact-link;
+}
 
 .half-page {
   display: inline-block;
@@ -10,8 +17,38 @@
   width: 46%;
 
   ul {
-    list-style: disc;
-    margin: 20px;
+    margin: 20px 20px 20px 30px;
+    line-height: 1.6em;
+    
+    li:before {    
+      margin: 0 15px 0 -15px;
+      color: $color-contact-link;
+    }
+
+    li.email:before {
+      @extend %font-awesome;
+      content: '\f2b6';
+    }
+    
+    li.twitter:before {
+      @extend %font-awesome-brands;
+      content: '\f099';
+    }
+    
+    li.linkedin:before {
+      @extend %font-awesome-brands;
+      content: '\f08c';
+    }
+    
+    li.github:before {
+      @extend %font-awesome-brands;
+      content: '\f09b';
+    }
+    
+    li.bitbucket:before {
+      @extend %font-awesome-brands;
+      content: '\f171';
+    }
   }
 
   p, div {
