--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -7,7 +7,7 @@
     <ul>
       <li><a routerLink="/experience" routerLinkActive="selected"  id="experience">Experience</a></li>
       <li><a routerLink="/skills" routerLinkActive="selected" id="skills">Skills</a></li>
-      <li><a href="#" id="projects">Projects</a></li>
+      <li><a routerLink="/projects" routerLinkActive="selected" id="projects">Projects</a></li>
       <li><a routerLink="/contact" routerLinkActive="selected" id="contact">Contact</a></li>
     </ul>
   </nav>
