Added links to each skill on the Skills page

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,64 +7,64 @@
       <div class="card-title"><i class="fas fa-mobile-alt"></i></div>
       <p>Android</p>
       <ul>
-        <li>Kotlin</li>
-        <li>Java</li>
-        <li>Espresso</li>
-        <li>Android Jetpack</li>
-        <li>Retrofit</li>
-        <li>Gradle</li>
+        <li><a href="https://kotlinlang.org/" target="_blank">Kotlin</a></li>
+        <li><a href="https://www.java.com/" target="_blank">Java</a></li>
+        <li><a href="https://developer.android.com/training/testing/espresso" target="_blank">Espresso</a></li>
+        <li><a href="https://developer.android.com/jetpack" target="_blank">Android Jetpack</a></li>
+        <li><a href="https://square.github.io/retrofit/" target="_blank">Retrofit</a></li>
+        <li><a href="https://gradle.org/" target="_blank">Gradle</a></li>
       </ul>
       <p>iOS</p>
       <ul>
-        <li>Swift</li>
-        <li>Objective-C</li>
-        <li>ReactiveX</li>
-        <li>R.swift</li>
+        <li><a href="https://swift.org/" target="_blank">Swift</a></li>
+        <li><a href="https://developer.apple.com/documentation/objectivec" target="_blank">Objective-C</a></li>
+        <li><a href="http://reactivex.io/" target="_blank">ReactiveX</a></li>
+        <li><a href="https://github.com/mac-cain13/R.swift" target="_blank">R.swift</a></li>
       </ul>
     </div>
     <div class="card">
       <div class="card-title"><i class="far fa-id-card"></i></div>
       <p>Frontend</p>
       <ul>
-        <li>Angular</li>
-        <li>TypeScript</li>
-        <li>Sass/CSS3</li>
-        <li>Bootstrap</li>
-        <li>Jasmine</li>
-        <li>Karma</li>
+        <li><a href="https://angular.io/" target="_blank">Angular</a></li>
+        <li><a href="https://www.typescriptlang.org/" target="_blank">TypeScript</a></li>
+        <li><a href="https://www.typescriptlang.org/" target="_blank">Sass/CSS3</a></li>
+        <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+        <li><a href="https://jasmine.github.io/" target="_blank">Jasmine</a></li>
+        <li><a href="https://karma-runner.github.io/" target="_blank">Karma</a></li>
       </ul>
       <p>Backend</p>
       <ul>
-        <li>Kotlin/Java</li>
-        <li>Dropwizard</li>
-        <li>Jooq</li>
-        <li>Retrofit</li>
-        <li>Gradle</li>
+        <li><a href="https://kotlinlang.org/" target="_blank">Kotlin/Java</a></li>
+        <li><a href="https://www.dropwizard.io/1.3.9/docs/" target="_blank">Dropwizard</a></li>
+        <li><a href="https://www.jooq.org" target="_blank">Jooq</a></li>
+        <li><a href="https://square.github.io/retrofit/" target="_blank">Retrofit</a></li>
+        <li><a href="https://gradle.org/" target="_blank">Gradle</a></li>
       </ul>
     </div>
     <div class="card">
       <div class="card-title"><i class="fas fa-gamepad"></i></div>
       <ul>
-        <li>C#</li>
-        <li>C++</li>
-        <li>Unity</li>
-        <li>MonoGame/XNA</li>
-        <li>OpenGL</li>
-        <li>WebGL</li>
+        <li><a href="https://docs.microsoft.com/en-us/dotnet/csharp/" target="_blank">C#</a></li>
+        <li><a href="http://www.cplusplus.com/" target="_blank">C++</a></li>
+        <li><a href="https://unity.com/" target="_blank">Unity</a></li>
+        <li><a href="http://www.monogame.net/" target="_blank">MonoGame/XNA</a></li>
+        <li><a href="https://www.opengl.org/" target="_blank">OpenGL</a></li>
+        <li><a href="https://www.khronos.org/webgl/" target="_blank">WebGL</a></li>
       </ul>
     </div>
     <div class="card">
       <div class="card-title"><i class="fas fa-server"></i></div>
       <ul>
-        <li>Jenkins</li>
-        <li>CircleCI</li>
-        <li>PostgreSQL</li>
-        <li>AWS</li>
-        <li>Docker</li>
-        <li>Vagrant</li>
-        <li>JetBrain's IDEs</li>
-        <li>Boxfuse</li>
-        <li>Flyway</li>
+        <li><a href="https://jenkins.io/" target="_blank">Jenkins</a></li>
+        <li><a href="https://circleci.com/" target="_blank">CircleCI</a></li>
+        <li><a href="https://www.postgresql.org/" target="_blank">PostgreSQL</a></li>
+        <li><a href="https://aws.amazon.com/" target="_blank">AWS</a></li>
+        <li><a href="https://www.docker.com/" target="_blank">Docker</a></li>
+        <li><a href="https://www.vagrantup.com/" target="_blank">Vagrant</a></li>
+        <li><a href="https://www.jetbrains.com/" target="_blank">JetBrain's IDEs</a></li>
+        <li><a href="https://boxfuse.com/" target="_blank">Boxfuse</a></li>
+        <li><a href="https://flywaydb.org/" target="_blank">Flyway</a></li>
       </ul>
     </div>
   </section>
