--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -53,6 +53,10 @@ section {
           margin: 0 15px 0 -15px;
           color: $color-skills;
         }
+
+        a {
+          color: black;
+        }
       }
     }
   }
