--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -8,30 +8,30 @@
         <div class="date">2015 - Present</div>
         <div class="content">
           <h4>Instil Software</h4>
-          <p>Since November 2015 I have been working for Instil Software, first as an Associate Engineer then as a Software Engineer. During this time I have worked on a wide variety of web and mobile based projects.</p>
+          <p>Since November 2015 I have been working for <a href="https://instil.co/" target="_blank">Instil Software</a>, first as an Associate Engineer then as a Software Engineer. During this time I have worked on a wide variety of web and mobile based projects.</p>
           <p>Primarily I have been working as the lead developer on the award-winning <a href="https://instil.co/surge/" target="_blank">Surge</a> project, which is a cross-platform RTP/RTSP client library optimised for mobile hardware. The library consists of a core networking library witten in C++ using Reactive Programming principles to optimise performance, and platform specific binding libraries which utilise the hardware decoding capabilities decode the video stream in as performant a way as possible.</p>
-          <p>Otherwise, I have also been involved in a variety of other web and mobile based projects, utilising a number of different technologies such as Angular, Dropwizard, Android Jetpack and Rx.</p>
+          <p>Otherwise, I have also been involved in a variety of other web and mobile based projects, utilising a number of different technologies such as <a href="https://angular.io/" target="_blank">Angular</a>, <a href="https://www.dropwizard.io/" target="_blank">Dropwizard</a>, <a href="https://developer.android.com/jetpack" target="_blank">Android Jetpack</a> and <a href="http://reactivex.io/" target="_blank">Rx</a>.</p>
         </div>
       </li>
       <li>
         <div class="date">2015</div>
         <div class="content">
           <h4>Bitnet</h4>
-          <p>During 2016 I worked with Bitnet, a bitcoin payment processor startup, working on their administration portal.</p>
+          <p>During 2016 I worked with <a href="https://bitnet.io/">Bitnet</a>, a bitcoin payment processor startup, working on their administration portal.</p>
         </div>
       </li>
       <li>
         <div class="date">2013 - 2014</div>
         <div class="content">
           <h4>CME Group</h4>
-          <p>For my University placement year I worked for CME Group as a Software Engineer Intern. The role consisted mostly as a back-end Java developer working on a number of web-based applications. Other responsibilities included writing Bash scripts for Unix environments, writing Selenium front-end tests and building computers out of old hardware parts for The Simon Community.</p>
+          <p>For my University placement year I worked for <a href="https://www.cmegroup.com/">CME Group</a> as a Software Engineer Intern. The role consisted mostly as a back-end Java developer working on a number of web-based applications. Other responsibilities included writing Bash scripts for Unix environments, writing <a href="https://www.seleniumhq.org/">Selenium</a> front-end tests and building computers out of old hardware parts for The Simon Community.</p>
         </div>
       </li>
       <li>
         <div class="date">2008 - 2010</div>
         <div class="content">
           <h4>Level Seven</h4>
-          <p>While I was in secondary school I had the opportunity to work with Level Seven on a week’s Work Experience. For the week I worked with their CMS management team to design and contribute to a handful of their client’s websites. After the week of work experience I continued to work with them in a similar capacity as a freelance contributer.</p>
+          <p>While I was in secondary school I had the opportunity to work with Level Seven on a weeks Work Experience. For the week I worked with their CMS management team to design and contribute to a handful of their client’s websites. After the week of work experience I continued to work with them in a similar capacity as a freelance contributer.</p>
         </div>
       </li>
     </ul>
