--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -36,7 +36,7 @@
       <p>Backend</p>
       <ul>
         <li><a href="https://kotlinlang.org/" target="_blank">Kotlin/Java</a></li>
-        <li><a href="https://www.dropwizard.io/1.3.9/docs/" target="_blank">Dropwizard</a></li>
+        <li><a href="https://www.dropwizard.io/" target="_blank">Dropwizard</a></li>
         <li><a href="https://www.jooq.org" target="_blank">Jooq</a></li>
         <li><a href="https://square.github.io/retrofit/" target="_blank">Retrofit</a></li>
         <li><a href="https://gradle.org/" target="_blank">Gradle</a></li>
