--- a/src/app/application/app.component.html
+++ b/src/app/application/app.component.html
@@ -5,13 +5,13 @@
   </div>
   <nav [ngClass]="menuIsOpen ? 'enabled' : ''">
     <ul>
-      <li><a routerLink="/experience" routerLinkActive="selected"  id="experience">Experience</a></li>
-      <li><a routerLink="/skills" routerLinkActive="selected" id="skills">Skills</a></li>
-      <li><a routerLink="/projects" routerLinkActive="selected" id="projects">Projects</a></li>
-      <li><a routerLink="/contact" routerLinkActive="selected" id="contact">Contact</a></li>
+      <li><a routerLink="/experience" (click)="closeMobileMenu()" routerLinkActive="selected"  id="experience">Experience</a></li>
+      <li><a routerLink="/skills" (click)="closeMobileMenu()" routerLinkActive="selected" id="skills">Skills</a></li>
+      <li><a routerLink="/projects" (click)="closeMobileMenu()" routerLinkActive="selected" id="projects">Projects</a></li>
+      <li><a routerLink="/contact" (click)="closeMobileMenu()" routerLinkActive="selected" id="contact">Contact</a></li>
     </ul>
   </nav>
-  <i id="menu-button" class="fas fa-bars" (click)="toggleMenu()"></i>
+  <i id="menu-button" class="fas fa-bars" (click)="toggleMobileMenu()"></i>
   <a href="https://github.com/Pkshields/PaulShields.dev" id="github-link" target="_blank"><i class="fab fa-github"></i></a>
 </header>
 <main>
