--- a/src/app/components/home/home.component.mobile.scss
+++ b/src/app/components/home/home.component.mobile.scss
@@ -1,5 +1,5 @@
-@import '../../css/mediasizes';
-@import '../../css/colors';
+@import '../../../css/mediasizes';
+@import '../../../css/colors';
 
 @media #{$mobile-size} {
   div {
