--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,5 +1,5 @@
-@import '../../css/colors';
-@import '../../css/fonts';
+@import '../../../css/colors';
+@import '../../../css/fonts';
 
 $animation-speed: 0.8s;
 $animation-delay: 1s;
