--- a/src/app/components/application/app.component.scss
+++ b/src/app/components/application/app.component.scss
@@ -1,5 +1,5 @@
-@import '../../css/colors';
-@import '../../css/fonts';
+@import '../../../css/colors';
+@import '../../../css/fonts';
 
 $header-width: 250px;
 $approx-nav-height: 550px;
