--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,6 +1,6 @@
-@import '../../css/colors';
-@import '../../css/fonts';
-@import '../../css/page';
+@import '../../../css/colors';
+@import '../../../css/fonts';
+@import '../../../css/page';
 
 @include standard-page-styling($color-contact, $color-contact-link);
 
