--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,4 +1,4 @@
-@import '../../css/colors';
-@import '../../css/page';
+@import '../../../css/colors';
+@import '../../../css/page';
 
 @include standard-page-styling($color-projects, $color-projects-link);
