Fix for issue for when the page is smaller than the height of the window, the background underneath the content is grey instead of the color of the page.

--- a/src/css/_page.scss
+++ b/src/css/_page.scss
@@ -44,9 +44,23 @@
     }
   }
 
+  :host {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    background-color: $page-color;
+  }
+
   @media #{$mobile-size} {
     header > h1 {
       padding-left: 50px;
     }
+  }
+
+  :host {
+    position: inherit;
   }
 }
