--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -3,6 +3,18 @@
 </header>
 <article>
   <section>
+    <h4>Video Games</h4>
+
+    <a href="#">
+      <div id="gbps3" class="project-item" style="background-image:url('assets/project-images/thumbnail/gbps3.png');">
+        <div class="project-item-hover">
+          <div>
+            <p>GBPS3</p>
+            <p class="subtext">GiantBomb.com Video on TV</p>
+          </div>
+        </div>
+      </div>
+    </a>
     
   </section>
 </article>
