--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -2,3 +2,60 @@
 @import '../../../css/page';
 
 @include standard-page-styling($color-projects, $color-projects-link);
+
+$project-item-width: 300px;
+$project-item-height: 200px;
+$project-item-hover-transition-time: 0.8s;
+
+.project-item {
+  width: $project-item-width;
+  height: $project-item-height;
+
+  display: inline-block;
+  margin: 15px 8px;
+  
+  overflow: hidden;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.5);
+  background-size: cover;
+  
+  .project-item-hover {
+    position: relative;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(20, 20, 20, 0);
+
+    left: $project-item-width * -1;
+    transition: $project-item-hover-transition-time;
+  }
+  
+  &:hover > .project-item-hover {
+    transition: $project-item-hover-transition-time;
+    left: 0;
+    background-color: rgba(20, 20, 20, 0.9);
+  }
+}
+
+.project-item > .project-item-hover > div  {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin: 15px 0;
+    
+  & > p {
+    width: 100%;
+    padding: 7px 10px;
+    margin: 0;
+
+    font-size: 10.8pt;
+    color: #E8E8E8;
+
+    text-align: left;
+  }
+    
+  & > p.subtext {
+    color: #B3B3B3;
+    font-size: 9.5pt;
+  }
+}
