Removed the project item design implementation from the Projects component in favor of reusing the Project Item Component.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,17 +4,7 @@
 <article>
   <section>
     <h4>Video Games</h4>
-
-    <a href="#">
-      <div id="gbps3" class="project-item" style="background-image:url('assets/project-images/thumbnail/gbps3.png');">
-        <div class="project-item-hover">
-          <div>
-            <p>GBPS3</p>
-            <p class="subtext">GiantBomb.com Video on TV</p>
-          </div>
-        </div>
-      </div>
-    </a>
+    <app-project-item [title]="'GBPS3'" [subtext]="'GiantBomb.com Video on TV'" [image]="'assets/project-images/thumbnail/gbps3.png'"></app-project-item>
     
   </section>
 </article>
