Added Project Section component to help with binding the project item to a modal for the more details view.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,7 +4,11 @@
 <article>
   <section>
     <h4>Video Games</h4>
-    <app-project-item [title]="'GBPS3'" [subtext]="'GiantBomb.com Video on TV'" [image]="'assets/project-images/thumbnail/gbps3.png'"></app-project-item>
+    <app-project-section 
+      [title]="'GBPS3'" 
+      [subtext]="'GiantBomb.com Video on TV'" 
+      [image]="'assets/project-images/thumbnail/gbps3.png'">
+    </app-project-section>
     
   </section>
 </article>
