Moved the GBPS3 project section logic to its own component with shared CSS in preparation for more projects getting added to the site.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -4,11 +4,6 @@
 <article>
   <section>
     <h4>Video Games</h4>
-    <app-project-section 
-      [title]="'GBPS3'" 
-      [subtext]="'GiantBomb.com Video on TV'" 
-      [image]="'assets/project-images/thumbnail/gbps3.png'">
-    </app-project-section>
-    
+    <app-project-gbps3></app-project-gbps3>
   </section>
 </article>
