--- a/src/app/pages/projects/project-details/gbps3/gbps3.project.component.html
+++ b/src/app/pages/projects/project-details/gbps3/gbps3.project.component.html
@@ -8,5 +8,6 @@
     <img src="assets/project-images/fullsize/gbps3.png" style="width: 535px; height: 298px;" />
     <p>GBPS3 is a website dedicated to providing the video content that the website <a href="https://giantbomb.com/" target="_blank">Giant Bomb</a> (a website about video games) produces in a TV friendly format. It uses their <a href="https://giantbomb.com/api/" target="_blank">public API</a> to access their huge database of videos. The website, however, has it's own unique categorisation method, ability to access member videos, multiple types of video players, RSS feeds and more.</p>
     <p><a href="https://bitbucket.org/Pkshields/gbps3/" target="_blank">View Source Code</a></p>
+    <p><a href="https://bitbucket.org/Pkshields/gbps3/src/master/README.md" target="_blank">Instructions on how to run the webapp locally</a></p>
   </article>
 </app-project-section>
