--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,5 +5,6 @@
   <section>
     <h4>Video Games</h4>
     <app-project-gbps3></app-project-gbps3>
+    <app-project-bombcast-radio></app-project-bombcast-radio>
   </section>
 </article>
