--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -5,13 +5,14 @@
   left: 0;
   right: 0;
   z-index: 999;
+  overflow-y: scroll;
 
   background-color: rgba(0, 0, 0, 0.5);
 
   article {
     background-color: white;
     width: 70%;
-    margin: 60px auto 0 auto;
+    margin: 60px auto 30px auto;
 
     color: black;
   }
