Fixed the header for the websites section of the projects page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,7 +3,7 @@
 </header>
 <article>
   <section>
-    <h4>Video Games</h4>
+    <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
   </section>
