Little tweaks to the Experience page.

--- a/src/app/pages/experience/experience.component.html
+++ b/src/app/pages/experience/experience.component.html
@@ -17,14 +17,14 @@
         <div class="date">2015</div>
         <div class="content">
           <h4>Bitnet</h4>
-          <p>During 2016 I worked with <a href="https://bitnet.io/">Bitnet</a>, a bitcoin payment processor startup, working on their administration portal.</p>
+          <p>During 2016 I worked with <a href="https://bitnet.io/" target="_blank">Bitnet</a>, a bitcoin payment processor startup, working on their administration portal.</p>
         </div>
       </li>
       <li>
         <div class="date">2013 - 2014</div>
         <div class="content">
           <h4>CME Group</h4>
-          <p>For my University placement year I worked for <a href="https://www.cmegroup.com/">CME Group</a> as a Software Engineer Intern. The role consisted mostly as a back-end Java developer working on a number of web-based applications. Other responsibilities included writing Bash scripts for Unix environments, writing <a href="https://www.seleniumhq.org/">Selenium</a> front-end tests and building computers out of old hardware parts for The Simon Community.</p>
+          <p>For my University placement year I worked for <a href="https://www.cmegroup.com/" target="_blank">CME Group</a> as a Software Engineer Intern. The role consisted mostly as a back-end Java developer working on a number of web-based applications. Other responsibilities included writing Bash scripts for Unix environments, writing <a href="https://www.seleniumhq.org/" target="_blank">Selenium</a> front-end tests and building computers out of old hardware parts for The Simon Community.</p>
         </div>
       </li>
       <li>
@@ -36,6 +36,6 @@
       </li>
     </ul>
 
-    <p>My full CV is also available <a href="assets/cv/CV-PaulShields.pdf">to download here</a>.</p>
+    <p>My full CV is also available <a href="assets/pdf/CV-PaulShields.pdf">to download here</a>.</p>
   </section>
 </article>
