Added the final year web physics project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -3,6 +3,8 @@
 </header>
 <article>
   <section>
+    <h4>Video Games</h4>
+    <app-project-web-physics></app-project-web-physics>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
