--- a/src/app/pages/projects/project-details/shared.project.component.scss
+++ b/src/app/pages/projects/project-details/shared.project.component.scss
@@ -42,8 +42,11 @@ article {
     li {
       padding: 4px 0;
       
-      &:first-child, &:last-child {
-        padding: 0;
+      &:first-child {
+        padding-top: 0;
+      }
+      &:last-child {
+        padding-bottom: 0;
       }
     }
   }
