Added the Physics4K project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,6 +5,7 @@
   <section>
     <h4>Video Games</h4>
     <app-project-web-physics></app-project-web-physics>
+    <app-project-physics4k></app-project-physics4k>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
