Added the particle system project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -6,6 +6,7 @@
     <h4>Video Games</h4>
     <app-project-web-physics></app-project-web-physics>
     <app-project-physics4k></app-project-physics4k>
+    <app-project-particle-system></app-project-particle-system>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
