--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -7,6 +7,7 @@
     <app-project-web-physics></app-project-web-physics>
     <app-project-physics4k></app-project-physics4k>
     <app-project-particle-system></app-project-particle-system>
+    <app-project-undead-redemption></app-project-undead-redemption>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
