Added the Game Of Life: Mafia Edition project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -8,6 +8,7 @@
     <app-project-physics4k></app-project-physics4k>
     <app-project-particle-system></app-project-particle-system>
     <app-project-undead-redemption></app-project-undead-redemption>
+    <app-project-game-of-life></app-project-game-of-life>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
