Added the BulletHeli project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -9,6 +9,7 @@
     <app-project-particle-system></app-project-particle-system>
     <app-project-undead-redemption></app-project-undead-redemption>
     <app-project-game-of-life></app-project-game-of-life>
+    <app-project-bulletheli></app-project-bulletheli>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
