Added the Vlappy Man project page.

--- a/src/app/pages/projects/project-details/shared.project.component.scss
+++ b/src/app/pages/projects/project-details/shared.project.component.scss
@@ -58,5 +58,9 @@ article {
     padding: 23px;
   }
 
+  i {
+    font-style: italic;
+  }
+
   @include standard-page-links-styling($color-projects-link);
 }
