--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -10,6 +10,8 @@
     <app-project-undead-redemption></app-project-undead-redemption>
     <app-project-game-of-life></app-project-game-of-life>
     <app-project-bulletheli></app-project-bulletheli>
+    <h4>Game Jams</h4>
+    <app-project-vlappy-man></app-project-vlappy-man>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
