Removed unnecessary _blank properties from all download links.

--- a/src/app/pages/projects/project-details/bulletheli/bulletheli.project.component.html
+++ b/src/app/pages/projects/project-details/bulletheli/bulletheli.project.component.html
@@ -9,8 +9,8 @@
     <p>BulletHeli is a Bullet Hell-esque Shoot 'em up built in XNA 4.0. You take the form of a helicopter flying across the desert, aiming to defeat the dreaded "Hella" for your life, and your country.</p>
     <p>The gameplay consists of you fighting the mass of enemies using your 4 weapon types (Gun, Bombs, Laser and Missiles). Alongside your arsenal, you have your trusty AI friend, tentatively named "Lil Guy", who can hit back with it's own firepower against the onslaught of enemy bullets.</p>
     <p>The game was our entrant into the <a href="http://www.gamesfleadh.ie/">2012 Games Fleadh</a></p>
-    <p><a href="https://bitbucket.org/Pkshields/bulletheli/downloads/BulletHeli-v1.0.zip" target="_blank">Download Game (Installer)</a></p>
-    <p><a href="https://bitbucket.org/Pkshields/bulletheli/downloads/BulletHeli-Standalone-v1.0.zip" target="_blank">Download Game (Standalone)</a></p>
+    <p><a href="https://bitbucket.org/Pkshields/bulletheli/downloads/BulletHeli-v1.0.zip">Download Game (Installer)</a></p>
+    <p><a href="https://bitbucket.org/Pkshields/bulletheli/downloads/BulletHeli-Standalone-v1.0.zip">Download Game (Standalone)</a></p>
     <p><a href="https://bitbucket.org/Pkshields/bulletheli/" target="_blank">View Source Code</a></p>
   </article>
 </app-project-section>
