Added The Pixel Underground project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -12,6 +12,7 @@
     <app-project-bulletheli></app-project-bulletheli>
     <h4>Game Jams</h4>
     <app-project-vlappy-man></app-project-vlappy-man>
+    <app-project-the-pixel-underground></app-project-the-pixel-underground>
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
