Added the KinectXNA project page. Slight README changes.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -16,5 +16,7 @@
     <h4>Websites</h4>
     <app-project-gbps3></app-project-gbps3>
     <app-project-bombcast-radio></app-project-bombcast-radio>
+    <h4>Frameworks</h4>
+    <app-project-kinectxna></app-project-kinectxna>
   </section>
 </article>
