Added the project page for the game frameworks.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -18,5 +18,6 @@
     <app-project-bombcast-radio></app-project-bombcast-radio>
     <h4>Frameworks</h4>
     <app-project-kinectxna></app-project-kinectxna>
+    <app-project-game-frameworks></app-project-game-frameworks>
   </section>
 </article>
