--- a/src/app/pages/projects/project-details/shared.project.component.scss
+++ b/src/app/pages/projects/project-details/shared.project.component.scss
@@ -36,11 +36,11 @@ article {
   }
   
   ul {
-    margin-left: 15px;
+    margin-left: 30px;
     list-style-type: disc;
 
     li {
-      padding: 4px 0;
+      padding: 3px 0;
       
       &:first-child {
         padding-top: 0;
@@ -52,7 +52,7 @@ article {
   }
   
   h3 {
-    @extend %open-sans-font;
+    @extend %open-sans-bold-font;
     text-align: center;
     font-size: 1.3em;
     padding: 23px;
