Added the MuScreenManager project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -19,5 +19,6 @@
     <h4>Frameworks</h4>
     <app-project-kinectxna></app-project-kinectxna>
     <app-project-game-frameworks></app-project-game-frameworks>
+    <app-project-muscreenmanager></app-project-muscreenmanager>
   </section>
 </article>
