Added the Super Easy PHP Templating page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -20,5 +20,6 @@
     <app-project-kinectxna></app-project-kinectxna>
     <app-project-game-frameworks></app-project-game-frameworks>
     <app-project-muscreenmanager></app-project-muscreenmanager>
+    <app-project-super-easy-php-templating></app-project-super-easy-php-templating>
   </section>
 </article>
