Added the Windows 8 Apps project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -21,5 +21,7 @@
     <app-project-game-frameworks></app-project-game-frameworks>
     <app-project-muscreenmanager></app-project-muscreenmanager>
     <app-project-super-easy-php-templating></app-project-super-easy-php-templating>
+    <h4>Extras</h4>
+    <app-project-windows-8-apps></app-project-windows-8-apps>
   </section>
 </article>
