Added the FooDIY project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -23,5 +23,6 @@
     <app-project-super-easy-php-templating></app-project-super-easy-php-templating>
     <h4>Extras</h4>
     <app-project-windows-8-apps></app-project-windows-8-apps>
+    <app-project-foodiy></app-project-foodiy>
   </section>
 </article>
