Added the Brainfuck Interpreter project page.

--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -24,5 +24,6 @@
     <h4>Extras</h4>
     <app-project-windows-8-apps></app-project-windows-8-apps>
     <app-project-foodiy></app-project-foodiy>
+    <app-project-brainfuck></app-project-brainfuck>
   </section>
 </article>
